// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders correctly 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  />
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs and last disabled 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1a7bljo-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1a7bljo-StyledTabButton:hover,
.cache-1a7bljo-StyledTabButton:active,
.cache-1a7bljo-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1a7bljo-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='true'],
.cache-1a7bljo-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          First
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Second
        </div>
      </div>
    </button>
    <button
      aria-disabled="true"
      aria-label="2"
      aria-selected="true"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="true"
      disabled=""
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs menu selected 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1a7bljo-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1a7bljo-StyledTabButton:hover,
.cache-1a7bljo-StyledTabButton:active,
.cache-1a7bljo-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1a7bljo-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='true'],
.cache-1a7bljo-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-sjyzwh-StyledPositioningWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  bottom: 0;
  right: 0;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1rie1b4-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1rie1b4-StyledTabButton-StyledMenu:hover,
.cache-1rie1b4-StyledTabButton-StyledMenu:active,
.cache-1rie1b4-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1rie1b4-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1rie1b4-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1rie1b4-StyledTabButton-StyledMenu .edb1sh92 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh92 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-qd0yov-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          First
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Second
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <div
      class="cache-sjyzwh-StyledPositioningWrapper edb1sh90"
    >
      <div
        aria-controls="menu-test"
        aria-describedby="menu-test"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        tabindex="-1"
      >
        <button
          aria-disabled="false"
          aria-expanded="true"
          aria-haspopup="dialog"
          class="cache-1rie1b4-StyledTabButton-StyledMenu edb1sh91"
          role="tab"
        >
          More
          <svg
            class="edb1sh92 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="cache-sjyzwh-StyledPositioningWrapper edb1sh90"
    >
      <div
        aria-controls="menu-:r1r:"
        aria-describedby="menu-:r1r:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        tabindex="-1"
      >
        <button
          aria-disabled="true"
          aria-expanded="false"
          aria-haspopup="dialog"
          class="cache-1rie1b4-StyledTabButton-StyledMenu edb1sh91"
          disabled=""
          role="tab"
        >
          More again
          <svg
            class="edb1sh92 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1xezjbx-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.cache-1xezjbx-StyledItem-StyledMenuItem svg {
  fill: #3f4250;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus {
  color: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover svg,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus svg {
  fill: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #641cb3;
}

.cache-1m6x1vf-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #b5b7bd;
  cursor: not-allowed;
  background: none;
}

.cache-1m6x1vf-StyledItem-StyledMenuItem svg {
  fill: #b5b7bd;
}

.cache-1m6x1vf-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #641cb3;
}

<div
    class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
    data-has-arrow="true"
    id="menu-test"
    role="dialog"
  >
    <div
      class="cache-7sm35h-Stack-MenuList e1jn11gg0"
      role="menu"
    >
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
      </div>
      <div>
        <button
          class="eeet93f0 cache-1m6x1vf-StyledItem-StyledMenuItem ei26g5y1"
          disabled=""
          role="menuitem"
          type="button"
        >
          Test
        </button>
      </div>
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
      </div>
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
      </div>
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs name 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1a7bljo-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1a7bljo-StyledTabButton:hover,
.cache-1a7bljo-StyledTabButton:active,
.cache-1a7bljo-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1a7bljo-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='true'],
.cache-1a7bljo-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-label="first"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          First
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="second"
      aria-selected="true"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="true"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Second
        </div>
      </div>
    </button>
    <button
      aria-disabled="true"
      aria-label="three"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      disabled=""
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with Tabs with prop 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1a7bljo-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1a7bljo-StyledTabButton:hover,
.cache-1a7bljo-StyledTabButton:active,
.cache-1a7bljo-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1a7bljo-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='true'],
.cache-1a7bljo-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-60k51q-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-vwnmew-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-sjyzwh-StyledPositioningWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  bottom: 0;
  right: 0;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1rie1b4-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1rie1b4-StyledTabButton-StyledMenu:hover,
.cache-1rie1b4-StyledTabButton-StyledMenu:active,
.cache-1rie1b4-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1rie1b4-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1rie1b4-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1rie1b4-StyledTabButton-StyledMenu .edb1sh92 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh92 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-qd0yov-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  top: 0;
  bottom: 0;
  background: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu:hover,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu:active,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu:focus-visible {
  outline: auto;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-disabled='true'],
.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu .edb1sh92 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu[aria-expanded='true'] .edb1sh92 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <button
      aria-disabled="false"
      aria-selected="true"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="true"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          First
          <span
            class="e1hzf7cr4 ej33bna0 cache-60k51q-StyledText-StyledSpan-StyledBadge e13y3mga0"
          >
            2
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="1"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Second
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Undefined
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Counter
          <span
            class="e1hzf7cr4 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
          >
            12
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-label="2"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Counter no items
          <span
            class="e1hzf7cr4 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
          >
            0
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Conter and badge
          <span
            class="e1hzf7cr4 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
          >
            12
          </span>
          <span
            class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
          >
            Badge
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Badge
          <span
            class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
          >
            Badge
          </span>
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <button
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </button>
    <div
      class="cache-sjyzwh-StyledPositioningWrapper edb1sh90"
    >
      <div
        aria-controls="menu-test"
        aria-describedby="menu-test"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        tabindex="-1"
      >
        <button
          aria-disabled="false"
          aria-expanded="true"
          aria-haspopup="dialog"
          class="cache-1rie1b4-StyledTabButton-StyledMenu edb1sh91"
          role="tab"
        >
          Blabla
          <svg
            class="edb1sh92 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="cache-sjyzwh-StyledPositioningWrapper edb1sh90"
    >
      <div
        aria-controls="menu-:rq:"
        aria-describedby="menu-:rq:"
        class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
        tabindex="-1"
      >
        <button
          aria-disabled="false"
          aria-expanded="true"
          aria-haspopup="dialog"
          class="ewug27g1 cache-si4ns4-StyledTabButton-StyledMenu-StyledTabMenu edb1sh91"
          role="tab"
        >
          More
          <svg
            class="edb1sh92 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
            viewBox="0 0 16 16"
          >
            <path
              d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1xezjbx-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.cache-1xezjbx-StyledItem-StyledMenuItem svg {
  fill: #3f4250;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus {
  color: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover svg,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus svg {
  fill: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #641cb3;
}

<div
    class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
    data-has-arrow="true"
    id="menu-test"
    role="dialog"
    style="animation: none;"
  >
    <div
      class="cache-7sm35h-Stack-MenuList e1jn11gg0"
      role="menu"
    >
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
      </div>
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
      </div>
    </div>
  </div>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1o2i76t-MenuContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-1o2i76t-MenuContainer .e1hzf7cr0 {
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 8px 16px;
  border-bottom-width: 1.5px;
  width: 100%;
  cursor: pointer;
  min-width: 110px;
  background-color: transparent;
}

.cache-1o2i76t-MenuContainer .e1hzf7cr0[aria-disabled='true'],
.cache-1o2i76t-MenuContainer .e1hzf7cr0:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1a7bljo-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1a7bljo-StyledTabButton:hover,
.cache-1a7bljo-StyledTabButton:active,
.cache-1a7bljo-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1a7bljo-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='true'],
.cache-1a7bljo-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-60k51q-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-vwnmew-StyledText-StyledSpan-StyledBadge {
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
  color: #3f4250;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
  padding: 0 8px;
  margin-left: 8px;
}

.cache-1hjfwlj-BadgeContainer {
  margin-left: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-sjyzwh-StyledPositioningWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  bottom: 0;
  right: 0;
}

.cache-1hzk1lh-StyledChildrenContainer {
  display: inherit;
}

.cache-1hzk1lh-StyledChildrenContainer[data-container-full-width='true'] {
  width: 100%;
}

.cache-1rie1b4-StyledTabButton-StyledMenu {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1rie1b4-StyledTabButton-StyledMenu:hover,
.cache-1rie1b4-StyledTabButton-StyledMenu:active,
.cache-1rie1b4-StyledTabButton-StyledMenu:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1rie1b4-StyledTabButton-StyledMenu:focus-visible {
  outline: auto;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-disabled='true'],
.cache-1rie1b4-StyledTabButton-StyledMenu:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-1rie1b4-StyledTabButton-StyledMenu .edb1sh92 {
  color: inherit;
  margin-left: 8px;
  -webkit-transition: 300ms -webkit-transform ease-out;
  transition: 300ms transform ease-out;
}

.cache-1rie1b4-StyledTabButton-StyledMenu[aria-expanded='true'] .edb1sh92 {
  -webkit-transform: rotate(-180deg);
  -moz-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.cache-qd0yov-sizeStyles-ArrowIcon {
  vertical-align: middle;
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<div
    class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
    data-has-arrow="true"
    id="menu-:rq:"
    role="dialog"
    style="animation: none;"
  >
    <div
      class="cache-7sm35h-Stack-MenuList e1jn11gg0"
      role="menu"
    >
      <div
        class="cache-1o2i76t-MenuContainer ewug27g2"
      >
        <button
          aria-disabled="false"
          aria-selected="true"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="true"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              First
              <span
                class="e1hzf7cr4 ej33bna0 cache-60k51q-StyledText-StyledSpan-StyledBadge e13y3mga0"
              >
                2
              </span>
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-label="1"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Second
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Undefined
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Counter
              <span
                class="e1hzf7cr4 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
              >
                12
              </span>
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-label="2"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Counter no items
              <span
                class="e1hzf7cr4 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
              >
                0
              </span>
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Conter and badge
              <span
                class="e1hzf7cr4 ej33bna0 cache-vwnmew-StyledText-StyledSpan-StyledBadge e13y3mga0"
              >
                12
              </span>
              <span
                class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
              >
                Badge
              </span>
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Badge
              <span
                class="cache-1hjfwlj-BadgeContainer e1hzf7cr1"
              >
                Badge
              </span>
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <button
          aria-disabled="false"
          aria-selected="false"
          class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
          data-is-selected="false"
          role="tab"
          type="button"
        >
          <div
            class="cache-ymc80m-Stack ehpbis70"
          >
            <div
              class="cache-1l6mcrb-Stack ehpbis70"
            >
              Very long tab name
            </div>
          </div>
        </button>
        <div
          class="cache-sjyzwh-StyledPositioningWrapper edb1sh90"
        >
          <div
            aria-controls="menu-test"
            aria-describedby="menu-test"
            class="cache-1hzk1lh-StyledChildrenContainer e4h1g860"
            tabindex="-1"
          >
            <button
              aria-disabled="false"
              aria-expanded="true"
              aria-haspopup="dialog"
              class="cache-1rie1b4-StyledTabButton-StyledMenu edb1sh91"
              role="tab"
            >
              Blabla
              <svg
                class="edb1sh92 cache-qd0yov-sizeStyles-ArrowIcon e1gt4cfo0"
                viewBox="0 0 16 16"
              >
                <path
                  d="M8 11c-.28 0-.55-.11-.74-.3L3.3 6.77a1.04 1.04 0 0 1 0-1.47 1.06 1.06 0 0 1 1.49 0L8 8.48l3.2-3.17a1.06 1.06 0 0 1 1.72.33 1.04 1.04 0 0 1-.23 1.14L8.74 10.7c-.2.2-.46.31-.74.31"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 12px, 0);
    -moz-transform: translate3d(0px, 12px, 0);
    -ms-transform: translate3d(0px, 12px, 0);
    transform: translate3d(0px, 12px, 0);
  }
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 232px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 12px, 0);
  -moz-transform: translate3d(0px, 12px, 0);
  -ms-transform: translate3d(0px, 12px, 0);
  transform: translate3d(0px, 12px, 0);
  -webkit-animation: 230ms animation-0 forwards;
  animation: 230ms animation-0 forwards;
  background-color: #ffffff;
  box-shadow: 0px 0px 24px 6px #d9dadd66;
  padding: 0;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -13px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup[data-has-arrow='true']::after {
  border-color: #ffffff transparent transparent transparent;
}

.cache-7sm35h-Stack-MenuList {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  background-color: #ffffff;
  color: #3f4250;
  border-radius: 4px;
  position: relative;
}

.cache-7sm35h-Stack-MenuList:after,
.cache-7sm35h-Stack-MenuList:before {
  border: solid transparent;
  border-width: 9px;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.cache-7sm35h-Stack-MenuList:after {
  border-color: transparent;
}

.cache-7sm35h-Stack-MenuList:before {
  border-color: transparent;
}

.cache-1xezjbx-StyledItem-StyledMenuItem {
  display: inline-block;
  font-size: 14px;
  line-height: 20px;
  font-weight: inherit;
  padding: 4px 8px;
  border: none;
  border-bottom: 1px solid #d9dadd;
  cursor: pointer;
  min-width: 110px;
  color: #3f4250;
  background: none;
}

.cache-1xezjbx-StyledItem-StyledMenuItem svg {
  fill: #3f4250;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus {
  color: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem:hover svg,
.cache-1xezjbx-StyledItem-StyledMenuItem:focus svg {
  fill: #222638;
}

.cache-1xezjbx-StyledItem-StyledMenuItem[aria-selected='true'] {
  color: #641cb3;
}

<div
    class="e1jn11gg1 cache-bgmk0v-StyledPopup-StyledPopup-StyledPopup e4h1g861"
    data-has-arrow="true"
    id="menu-test"
    role="dialog"
    style="animation: none;"
  >
    <div
      class="cache-7sm35h-Stack-MenuList e1jn11gg0"
      role="menu"
    >
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test
        </button>
      </div>
      <div>
        <button
          class="eeet93f0 cache-1xezjbx-StyledItem-StyledMenuItem ei26g5y1"
          role="menuitem"
          type="button"
        >
          Test 2
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs renders correctly with custom Tabs component 1`] = `
<DocumentFragment>
  .cache-ixreip-TabsContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  overflow-x: scroll;
  position: relative;
  z-index: 0;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.cache-ixreip-TabsContainer::after {
  z-index: -1;
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  height: 2px;
  background: #d9dadd;
}

.cache-ixreip-TabsContainer::-webkit-scrollbar {
  display: none;
}

.cache-1a7bljo-StyledTabButton {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1a7bljo-StyledTabButton:hover,
.cache-1a7bljo-StyledTabButton:active,
.cache-1a7bljo-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1a7bljo-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1a7bljo-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1a7bljo-StyledTabButton[aria-disabled='true'],
.cache-1a7bljo-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

.cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1l6mcrb-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1olgjpb-StyledLink-StyledTabButton {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #005da3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 8px;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px 16px;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  white-space: nowrap;
  color: #3f4250;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  touch-action: manipulation;
  -webkit-transition: color 0.2s;
  transition: color 0.2s;
  border: none;
  background: none;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-bottom-color: #d9dadd;
  outline: none;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
}

.cache-1olgjpb-StyledLink-StyledTabButton .e1afnb7a2 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.cache-1olgjpb-StyledLink-StyledTabButton>* {
  pointer-events: none;
}

.cache-1olgjpb-StyledLink-StyledTabButton:hover,
.cache-1olgjpb-StyledLink-StyledTabButton:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #004c85;
  text-decoration-color: #004c85;
}

.cache-1olgjpb-StyledLink-StyledTabButton:hover .e1afnb7a2,
.cache-1olgjpb-StyledLink-StyledTabButton:focus .e1afnb7a2 {
  -webkit-transform: translate(-4px, 0);
  -moz-transform: translate(-4px, 0);
  -ms-transform: translate(-4px, 0);
  transform: translate(-4px, 0);
}

.cache-1olgjpb-StyledLink-StyledTabButton[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.cache-1olgjpb-StyledLink-StyledTabButton:hover::after,
.cache-1olgjpb-StyledLink-StyledTabButton:focus::after {
  background-color: #005da3;
}

.cache-1olgjpb-StyledLink-StyledTabButton:active {
  text-decoration-thickness: 2px;
}

.cache-1olgjpb-StyledLink-StyledTabButton:hover,
.cache-1olgjpb-StyledLink-StyledTabButton:active,
.cache-1olgjpb-StyledLink-StyledTabButton:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: none;
}

.cache-1olgjpb-StyledLink-StyledTabButton:focus-visible {
  outline: auto;
}

.cache-1olgjpb-StyledLink-StyledTabButton[aria-selected='true'] {
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1olgjpb-StyledLink-StyledTabButton[aria-selected='true'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover,
.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus,
.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active {
  outline: none;
  color: #641cb3;
  border-bottom-color: #8c40ef;
}

.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr4,
.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr4,
.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr4 {
  background-color: #f1eefc;
  border-color: #f1eefc;
  color: #641cb3;
}

.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):hover[data-is-selected='false'] .e1hzf7cr3,
.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):focus[data-is-selected='false'] .e1hzf7cr3,
.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='false']:not(:disabled):active[data-is-selected='false'] .e1hzf7cr3 {
  color: #641cb3;
}

.cache-1olgjpb-StyledLink-StyledTabButton[aria-disabled='true'],
.cache-1olgjpb-StyledLink-StyledTabButton:disabled {
  cursor: not-allowed;
  -webkit-filter: grayscale(1) opacity(50%);
  filter: grayscale(1) opacity(50%);
}

<div
    class="cache-ixreip-TabsContainer ewug27g0"
    role="tablist"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          First
        </div>
      </div>
    </div>
    <a
      aria-disabled="false"
      aria-selected="false"
      class="cache-1a7bljo-StyledTabButton e1hzf7cr0"
      data-is-selected="false"
      role="tab"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Second
        </div>
      </div>
    </a>
    <a
      class="e1hzf7cr0 cache-1olgjpb-StyledLink-StyledTabButton e1afnb7a0"
      data-variant="standalone"
      href="#"
    >
      <div
        class="cache-ymc80m-Stack ehpbis70"
      >
        <div
          class="cache-1l6mcrb-Stack ehpbis70"
        >
          Very long tab name
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
